# dod-talk

./: .gitignore  CMakeLists.txt  README.md
dod_1/: CMakeLists.txt  dod_1  main.cpp
dod_1a/: main.cpp
dod_1b/: CMakeLists.txt  main.cpp
dod_2/: CMakeLists.txt  dod_2  main.cpp
dod_3/: CMakeLists.txt  dod_3  main.cpp
